--- a/components/accounts/register.jade
+++ b/components/accounts/register.jade
@@ -3,7 +3,7 @@ template(name='register')
         .centered.row
             .ten.wide.column
                 .ui.center.aligned.basic.segment
-                    .ui.header gold run online registration
+                    .ui.header gold run registration
                     //- i.massive.icons
                     //-     i.home.grey.icon
                     //-     i.corner.plus.icon
