--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title gro
+    title Gold Run
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -7,9 +7,6 @@ head
     meta(name="theme-color" content="#000000")
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css')
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:300,700" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet")
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
     link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
@@ -20,13 +17,8 @@ head
     script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
     script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js')
-    // script(src="http://cdn.dhtmlx.com/edge/dhtmlx.js" type="text/javascript") */
-    //- /* script(src="https://js.stripe.com/v3/") */
-
 
 template(name='layout')
-    //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=cal500 crop='crop'}}")
-    //- img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
     +nav
     //- if currentUser
     .ui.stackable.grid(class=invert_class)
