--- a/client/staff.jade
+++ b/client/staff.jade
@@ -1,23 +1,24 @@
 template(name='staff')
     .ui.stackable.padded.grid
-        .sixteen.wide.column
+        .four.wide.column
             h1.ui.grey.large.inline.header 
                 //- i.user.shield.icon
-                //- +i name='manager'
+                +i name='manager'
                 |staff
             //- i.massive.loading.brown.poo.icon
             a.ui.big.compact.basic.button(href='/add_resident')
                 //- i.user.add.large.icon
-                +i name='add-user-male' classes='ui inline image'
+                +i name='add-user-male' classes='ui inline mini image'
                 strong add resident
-            .ui.inline.header
+            .ui.header
                 |#{checkedin_members.count} checked in members
             //- +add_button model='work_order' label='work order'
             //- +add_button model='communication' label='communication'
             //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
             //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
             //- +unit_key_widget
-            //- .twelve.wide.column
+        
+        .twelve.wide.column
             +inline_doc slug='staff_notices' classes='ui small grey header'
             .ui.styled.fluid.accordion
                 .active.title
@@ -239,36 +240,36 @@ template(name='schedule')
                     +facet_staff_select tags='shift,friday,evening'
                 td 
                     +facet_staff_select tags='shift,saturday,evening'
-    .ui.header upcoming week
-    +inline_doc slug='staff_schedule_notes' classes='ui small grey header'    
-    table.ui.definition.celled.striped.unstackable.selectable.table
-        thead
-            tr
-                th
-                th Sun
-                th Mon
-                th Tues
-                th Wed
-                th Thurs
-                th Fri
-                th Sat
-        tbody
-            tr
-                td 7/8am-4pm
-                td 
-                    +facet_staff_select tags='upcoming,shift,sunday,morning'
-                td 
-                    +facet_staff_select tags='upcoming,shift,monday,morning'
-                td 
-                    +facet_staff_select tags='upcoming,shift,tuesday,morning'
-                td 
-                    +facet_staff_select tags='upcoming,shift,wednesday,morning'
-                td 
-                    +facet_staff_select tags='upcoming,shift,thursday,morning'
-                td 
-                    +facet_staff_select tags='upcoming,shift,friday,morning'
-                td 
-                    +facet_staff_select tags='upcoming,shift,saturday,morning'
+    //- .ui.header upcoming week
+    //- +inline_doc slug='staff_schedule_notes' classes='ui small grey header'    
+    //- table.ui.definition.celled.striped.unstackable.selectable.table
+    //-     thead
+    //-         tr
+    //-             th
+    //-             th Sun
+    //-             th Mon
+    //-             th Tues
+    //-             th Wed
+    //-             th Thurs
+    //-             th Fri
+    //-             th Sat
+    //-     tbody
+    //-         tr
+    //-             td 7/8am-4pm
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,sunday,morning'
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,monday,morning'
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,tuesday,morning'
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,wednesday,morning'
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,thursday,morning'
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,friday,morning'
+    //-             td 
+    //-                 +facet_staff_select tags='upcoming,shift,saturday,morning'
             //- tr
             //-     td afternoon 12pm-4pm
             //-     td 
