remove a bunch, little better, faster

--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -133,5 +133,7 @@ template(name='delta_result')
                             +author_info
                         +creation_info
                             
+                    if is_admin
+                        +remove_button
                 
                         
