--- a/client/staff.jade
+++ b/client/staff.jade
@@ -1,52 +1,53 @@
 template(name='staff')
     .ui.stackable.padded.grid
-        .four.wide.column
-            h1.ui.grey.large.inline.header 
-                //- i.user.shield.icon
-                +i name='manager'
-                |staff
-            //- i.massive.loading.brown.poo.icon
-            a.ui.big.compact.basic.button(href='/add_resident')
-                //- i.user.add.large.icon
-                +i name='add-user-male' classes='ui inline mini image'
-                strong add resident
-            .ui.header
-                |#{checkedin_members.count} checked in members
-            //- +add_button model='work_order' label='work order'
-            //- +add_button model='communication' label='communication'
-            //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-            //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
-            //- +unit_key_widget
-        
-        .twelve.wide.column
-            +inline_doc slug='staff_notices' classes='ui small grey header'
-            .ui.styled.fluid.accordion
-                .active.title
-                    i.users.icon
-                    |checked in members
-                    i.dropdown.icon
-                .active.content
-                    .ui.stackable.four.cards
-                        each sessions
-                            +hc_session
-                .title 
-                    i.tablet.icon
-                    |kiosk management
-                    i.dropdown.icon
-                .content
-                    +kiosk_settings
-                .title 
-                    i.calendar.icon
-                    |staff schedule
-                    i.dropdown.icon
-                .content
-                    +schedule
-                .title
-                    i.chat.icon
-                    |chat
-                    i.dropdown.icon
-                .content
-                    +view_chats
+        .row
+            .sixteen.wide.column
+                h1.ui.grey.large.inline.header 
+                    //- i.user.shield.icon
+                    +i name='manager'
+                    |staff
+                //- i.massive.loading.brown.poo.icon
+                a.ui.big.compact.basic.button(href='/add_resident')
+                    //- i.user.add.large.icon
+                    +i name='add-user-male' classes='ui inline mini image'
+                    strong add resident
+                .ui.inline.header
+                    |#{checkedin_members.count} checked in members
+                +inline_doc slug='staff_notices' classes='ui small grey header'
+                //- +add_button model='work_order' label='work order'
+                //- +add_button model='communication' label='communication'
+                //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+                //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
+                //- +unit_key_widget
+        .row
+            .sixteen.wide.column
+                .ui.styled.fluid.large.accordion
+                    .active.title
+                        i.users.icon
+                        |checked in members
+                        i.dropdown.icon
+                    .active.content
+                        .ui.stackable.four.cards
+                            each sessions
+                                +hc_session
+                    .title 
+                        i.tablet.icon
+                        |kiosk management
+                        i.dropdown.icon
+                    .content
+                        +kiosk_settings
+                    .title 
+                        i.calendar.icon
+                        |staff schedule
+                        i.dropdown.icon
+                    .content
+                        +schedule
+                    //- .title
+                    //-     i.chat.icon
+                    //-     |chat
+                    //-     i.dropdown.icon
+                    //- .content
+                    //-     +view_chats
     
     
 
@@ -95,13 +96,18 @@ template(name='hc_session')
                 +date_view key='start_date' label='start date' direct=true
                 +date_view key='expiration_date' label='expiration date' direct=true
             //- +checkin_button
-            +garden_key_checkout
-            //- +unit_key_checkout
-            //- +email_validation_check
-            //- +lease_expiration_check
-            //- +rules_and_regs_check
-            +array_view key='roles' direct=true
-            if active
+            if garden_key
+                .ui.compact.green.fluid.button.garden_key_checkout
+                    +i name='plant' classes='ui mini inline image'
+                    strong garden key
+                .ui.fluid.large.button.check_in_garden_key
+                    i.sign.in.icon
+                    |check in garden key
+            else
+                .ui.compact.fluid.button.garden_key_checkout
+                    +i name='plant' classes='ui mini inline image'
+                    strong garden key
+                    
                 .ui.fluid.button.sign_out
                     i.sign.out.icon
                     |check out
@@ -112,18 +118,6 @@ template(name='hc_session')
                 //- unless confirmed
                 //- .ui.fluid.green.button
                 //-     |confirm check in
-
-
-
-template(name='garden_key_checkout')
-    if garden_key
-        .ui.compact.green.fluid.button.garden_key_checkout
-            +i name='plant' classes='ui mini inline image'
-            strong garden key
-    else
-        .ui.compact.fluid.button.garden_key_checkout
-            +i name='plant' classes='ui mini inline image'
-            strong garden key
 
 
 
