--- a/client/users.jade
+++ b/client/users.jade
@@ -22,10 +22,10 @@
 template(name='user_item')                            
     .ui.stackable.grid.segment
         a.four.wide.column(href="/user/#{_id}/view") 
-            if image_id
+            if kiosk_photo
+                img.ui.image(src="{{c.url kiosk_photo width=200 height=150 crop='fit'}}")
+            else if image_id
                 img.ui.image(src="{{c.url image_id width=200 height=150 crop='fit'}}")
-            else if profile.image_id
-                img.ui.image(src="{{c.url profile.image_id width=200 height=150 crop='fit'}}")
         .twelve.wide.column
             a.ui.header(href="/user/#{username}") 
                 |#{profile.name}
@@ -74,7 +74,10 @@ template(name='user')
         .image
             //- a(href="/user/#{username}/")
             //- img(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
-            img(src="{{c.url image_id height=300 width=300 gravity='face' crop='fill'}}")
+            if kiosk_photo
+                img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
+            else if image_id
+                img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
         .content
             a(href="/user/#{username}/")
                 h2.ui.center.aligned.header #{first_name} #{last_name} 
@@ -91,6 +94,6 @@ template(name='user')
             +phone_view key='phone' label='Phone'
             +date_view key='start_date' label='Start Date'
             +date_view key='expiration_date' label='Expiration Date'
-            +user_connect_button
+            +user_check_steps            
 
             
